Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_SetTrigCount (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetJoystickDir (int lLSID, int *plXD, int *plYD, int *plZD, int *plRD);

TANGOAPI int TANGOCALL LSX_GetJoystick (int lLSID, BOOL *pbJoystickOn, BOOL *pbManual, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGOAPI int TANGOCALL LSX_GetJoystickWindow (int lLSID, int *plAValue);

TANGOAPI int TANGOCALL LSX_GetHandWheel (int lLSID, BOOL *pbHandWheelOn, BOOL *pbPositionCount, BOOL *pbEncoder);

TANGOAPI int TANGOCALL LSX_GetBPZ (int lLSID, int *plAValue);

TANGOAPI int TANGOCALL LSX_GetBPZTrackballFactor (int lLSID, double *pdAValue);

TANGOAPI int TANGOCALL LSX_GetBPZTrackballBackLash (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetBPZJoyspeed (int lLSID, int lAPar, double *pdAValue);

TANGOAPI int TANGOCALL LSX_GetLimitControl (int lLSID, int lAxis, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_SetAutoLimitAfterCalibRM (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_GetAutoLimitAfterCalibRM (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetSwitchPolarity (int lLSID, int *plXP, int *plYP, int *plZP, int *plRP);

TANGOAPI int TANGOCALL LSX_GetSwitchActive (int lLSID, int *plXA, int *plYA, int *plZA, int *plRA);

TANGOAPI int TANGOCALL LSX_GetTVRMode (int lLSID, int *plXT, int *plYT, int *plZT, int *plRT);

TANGOAPI int TANGOCALL LSX_GetFactorTVR (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetTVROutMode (int lLSID, int lXT, int lYT, int lZT, int lRT);

TANGOAPI int TANGOCALL LSX_GetTVROutMode (int lLSID, int *plXT, int *plYT, int *plZT, int *plRT);

TANGOAPI int TANGOCALL LSX_SetTVROutResolution (int lLSID, int lX, int lY, int lZ, int lR);

TANGOAPI int TANGOCALL LSX_GetTVROutResolution (int lLSID, int *plX, int *plY, int *plZ, int *plR);

TANGOAPI int TANGOCALL LSX_SetTVROutPitch (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetTVROutPitch (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetVelTVRO (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetVelTVRO (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetAccelTVRO (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetAccelTVRO (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetVelSingleAxisTVRO (int lLSID, int lAxis, double dVel);

TANGOAPI int TANGOCALL LSX_SetAccelSingleAxisTVRO (int lLSID, int lAxis, double dAccel);

TANGOAPI int TANGOCALL LSX_SetPosTVRO (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetPosTVRO (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_MoveAbsTVRO (int lLSID, double dX, double dY, double dZ, double dR, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveRelTVRO (int lLSID, double dX, double dY, double dZ, double dR, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveRelTVROSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveAbsTVROSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_GetStatusTVRO (int lLSID, char *pcStat, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetTargetWindow (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetEncoderPeriod (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetEncoderRefSignal (int lLSID, int *plXR, int *plYR, int *plZR, int *plRR);

TANGOAPI int TANGOCALL LSX_GetEncoderPosition (int lLSID, BOOL *pbValue);

TANGOAPI int TANGOCALL LSX_GetEncoderActive (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetController (int lLSID, int *plXC, int *plYC, int *plZC, int *plRC);

TANGOAPI int TANGOCALL LSX_GetControllerCall (int lLSID, int *plCtrCall);

TANGOAPI int TANGOCALL LSX_GetControllerSteps (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetControllerFactor (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);


TANGOAPI int TANGOCALL LSX_GetControllerTWDelay (int lLSID, int *plCtrTWDelay);

TANGOAPI int TANGOCALL LSX_GetControllerTimeout (int lLSID, int *plACtrTimeout);

TANGOAPI int TANGOCALL LSX_SetCtrFastMoveOn (int lLSID);

TANGOAPI int TANGOCALL LSX_SetCtrFastMoveOff (int lLSID);

TANGOAPI int TANGOCALL LSX_GetCtrFastMove (int lLSID, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_ClearCtrFastMoveCounter (int lLSID);

TANGOAPI int TANGOCALL LSX_GetCtrFastMoveCounter (int lLSID, int *plXC, int *plYC, int *plZC, int *plRC);

TANGOAPI int TANGOCALL LSX_ClearEncoder (int lLSID, int lAxis);

TANGOAPI int TANGOCALL LSX_GetEncoder (int lLSID, double *pdXP, double *pdYP, double *pdZP, double *pdRP);

TANGOAPI int TANGOCALL LSX_GetTrigger (int lLSID, BOOL *pbATrigger);

TANGOAPI int TANGOCALL LSX_GetTriggerPar (int lLSID, int *plAxis, int *plMode, int *plSignal, double *pdDistance);

TANGOAPI int TANGOCALL LSX_GetTrigCount (int lLSID, int *plValue);


TANGOAPI int TANGOCALL LSX_SetTVRInPulse (int lLSID, int lAxis, BOOL bDirection);

TANGOAPI int TANGOCALL LSX_GetSnapshot (int lLSID, BOOL *pbASnapshot);

TANGOAPI int TANGOCALL LSX_SetSnapshotFilter (int lLSID, int lTime);

TANGOAPI int TANGOCALL LSX_GetSnapshotFilter (int lLSID, int *plTime);

TANGOAPI int TANGOCALL LSX_GetSnapshotPar (int lLSID, BOOL *pbHigh, BOOL *pbAutoMode);

TANGOAPI int TANGOCALL LSX_GetLimit (int lLSID, int lAxis, double *pdMinRange, double *pdMaxRange);

TANGOAPI int TANGOCALL LSX_JoyChangeAxis (int lLSID, BOOL bValue);

TANGOAPI int TANGOCALL LSX_GetJoyChangeAxis (int lLSID, BOOL *pbValue);