Tango/DLL Examples/Visual_Basic/SourceCode/Tango_X.vb

	Declare Function LSX_GetJoystickDir Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXD As Integer, ByRef plYD As Integer, ByRef plZD As Integer, ByRef plRD As Integer) As Integer
	Declare Function LSX_GetJoystick Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbJoystickOn As Integer, ByRef pbManual As Integer, ByRef pbPositionCount As Integer, ByRef pbEncoder As Integer) As Integer
	Declare Function LSX_GetJoystickWindow Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plAValue As Integer) As Integer
	Declare Function LSX_GetHandWheel Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbHandWheelOn As Integer, ByRef pbPositionCount As Integer, ByRef pbEncoder As Integer) As Integer
	Declare Function LSX_GetBPZ Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plAValue As Integer) As Integer
	Declare Function LSX_GetBPZTrackballFactor Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdAValue As Double) As Integer
	Declare Function LSX_GetBPZTrackballBackLash Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetBPZJoyspeed Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAPar As Integer, ByRef pdAValue As Double) As Integer
	Declare Function LSX_GetLimitControl Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByRef pbActive As Integer) As Integer
	Declare Function LSX_SetAutoLimitAfterCalibRM Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lFlags As Integer) As Integer
	Declare Function LSX_GetAutoLimitAfterCalibRM Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plFlags As Integer) As Integer
	Declare Function LSX_GetSwitchPolarity Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXP As Integer, ByRef plYP As Integer, ByRef plZP As Integer, ByRef plRP As Integer) As Integer
	Declare Function LSX_GetSwitchActive Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXA As Integer, ByRef plYA As Integer, ByRef plZA As Integer, ByRef plRA As Integer) As Integer
	Declare Function LSX_GetTVRMode Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXT As Integer, ByRef plYT As Integer, ByRef plZT As Integer, ByRef plRT As Integer) As Integer
	Declare Function LSX_GetFactorTVR Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_SetTVROutMode Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lXT As Integer, ByVal lYT As Integer, ByVal lZT As Integer, ByVal lRT As Integer) As Integer
	Declare Function LSX_GetTVROutMode Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXT As Integer, ByRef plYT As Integer, ByRef plZT As Integer, ByRef plRT As Integer) As Integer
	Declare Function LSX_SetTVROutResolution Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lX As Integer, ByVal lY As Integer, ByVal lZ As Integer, ByVal lR As Integer) As Integer
	Declare Function LSX_GetTVROutResolution Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plX As Integer, ByRef plY As Integer, ByRef plZ As Integer, ByRef plR As Integer) As Integer
	Declare Function LSX_SetTVROutPitch Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetTVROutPitch Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_SetVelTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetVelTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_SetAccelTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetAccelTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_SetVelSingleAxisTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dVel As Double) As Integer
	Declare Function LSX_SetAccelSingleAxisTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dAccel As Double) As Integer
	Declare Function LSX_SetPosTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double) As Integer
	Declare Function LSX_GetPosTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_MoveAbsTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_MoveRelTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dR As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_MoveRelTVROSingleAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_MoveAbsTVROSingleAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal dValue As Double, ByVal bWait As Integer) As Integer
	Declare Function LSX_GetStatusTVRO Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal pcStat As String, ByVal lMaxLen As Integer) As Integer
	Declare Function LSX_GetTargetWindow Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetEncoderPeriod Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetEncoderRefSignal Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXR As Integer, ByRef plYR As Integer, ByRef plZR As Integer, ByRef plRR As Integer) As Integer
	Declare Function LSX_GetEncoderPosition Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbValue As Integer) As Integer
	Declare Function LSX_GetEncoderActive Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plFlags As Integer) As Integer
	Declare Function LSX_GetController Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXC As Integer, ByRef plYC As Integer, ByRef plZC As Integer, ByRef plRC As Integer) As Integer
	Declare Function LSX_GetControllerCall Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plCtrCall As Integer) As Integer
	Declare Function LSX_GetControllerSteps Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetControllerFactor Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdX As Double, ByRef pdY As Double, ByRef pdZ As Double, ByRef pdR As Double) As Integer
	Declare Function LSX_GetControllerTWDelay Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plCtrTWDelay As Integer) As Integer
	Declare Function LSX_GetControllerTimeout Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plACtrTimeout As Integer) As Integer
	Declare Function LSX_SetCtrFastMoveOn Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_SetCtrFastMoveOff Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_GetCtrFastMove Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbActive As Integer) As Integer
	Declare Function LSX_ClearCtrFastMoveCounter Lib "Tango_X.dll" (ByVal LSID As Integer)  As Integer
	Declare Function LSX_GetCtrFastMoveCounter Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plXC As Integer, ByRef plYC As Integer, ByRef plZC As Integer, ByRef plRC As Integer) As Integer
	Declare Function LSX_ClearEncoder Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer) As Integer
	Declare Function LSX_GetEncoder Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pdXP As Double, ByRef pdYP As Double, ByRef pdZP As Double, ByRef pdRP As Double) As Integer
	Declare Function LSX_GetTrigger Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbATrigger As Integer) As Integer
	Declare Function LSX_GetTriggerPar Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plAxis As Integer, ByRef plMode As Integer, ByRef plSignal As Integer, ByRef pdDistance As Double) As Integer
	Declare Function LSX_SetTrigCount Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lValue As Integer) As Integer
	Declare Function LSX_GetTrigCount Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plValue As Integer) As Integer
	Declare Function LSX_SetTVRInPulse Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByVal bDirection As Integer) As Integer
	Declare Function LSX_GetSnapshot Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbASnapshot As Integer) As Integer
	Declare Function LSX_SetSnapshotFilter Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lTime As Integer) As Integer
	Declare Function LSX_GetSnapshotFilter Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef plTime As Integer) As Integer
	Declare Function LSX_GetSnapshotPar Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbHigh As Integer, ByRef pbAutoMode As Integer) As Integer
	Declare Function LSX_GetLimit Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal lAxis As Integer, ByRef pdMinRange As Double, ByRef pdMaxRange As Double) As Integer
	Declare Function LSX_JoyChangeAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByVal bValue As Integer) As Integer
	Declare Function LSX_GetJoyChangeAxis Lib "Tango_X.dll" (ByVal LSID As Integer, ByRef pbValue As Integer) As Integer
End Module